--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.5.4",
     "@strapi/strapi": "4.5.4",
     "better-sqlite3": "7.4.6",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "strapi-provider-upload-azure-storage": "^2.1.0"
   },
   "author": {
     "name": "A Strapi developer"
