--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "@strapi/strapi": "4.5.4",
     "better-sqlite3": "7.4.6",
     "mysql": "^2.18.1",
-    "strapi-provider-upload-azure-storage": "^2.1.0"
+    "strapi-provider-upload-azure-storage": "^2.1.0",
+    "stripe": "^12.11.0"
   },
   "author": {
     "name": "A Strapi developer"
