--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,16 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.5.4",
-    "@strapi/plugin-users-permissions": "4.5.4",
-    "@strapi/strapi": "4.5.4",
-    "better-sqlite3": "7.4.6",
+    "@strapi/plugin-i18n": "4.24.4",
+    "@strapi/plugin-users-permissions": "4.24.4",
+    "@strapi/provider-upload-aws-s3": "^4.24.4",
+    "@strapi/strapi": "4.24.4",
+    "better-sqlite3": "11.0.0",
     "mysql": "^2.18.1",
-    "strapi-provider-upload-azure-storage": "^2.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^5.3.4",
+    "styled-components": "^5.3.11"
   },
   "author": {
     "name": "A Strapi developer"
@@ -24,7 +28,7 @@
     "uuid": "c7a24868-25de-488a-8f84-c7c75dba39c1"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": ">=14.19.1 <=20.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
