--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
+    "stripe": "^12.11.0",
     "styled-components": "^5.3.11"
   },
   "engines": {
